Configured hibernate property ddl-auto to update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/neeraj
+spring.datasource.url=jdbc:postgresql://localhost:5432/project
 spring.datasource.username=neeraj
 spring.datasource.password=root
 
