--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=neeraj
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
 
-spring.jpa.hibernate.ddl-auto = update
-
+spring.thymeleaf.cache=false
 
