--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/project
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogproject
 spring.datasource.username=neeraj
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 spring.thymeleaf.cache=false
-
