--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogproject
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=neeraj
 spring.datasource.password=root
 
